--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,13 @@
+header{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .articles{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 
     margin: 30px 15px 0;
 }
