--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,14 @@
+<header>
+    <app-menu-bar></app-menu-bar>
+</header>
 <app-menu-title></app-menu-title>
 <div class="articles">
     <div class="article_main">
-        <app-big-card></app-big-card>
+        <app-big-card photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" cardTitle="Nova notícia dinâmica" cardDescription="Entrada dinâmica de descrição... SHow de bola!!!"></app-big-card>
     </div>
     <div class="article_others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" smallCardTitle="Titulo do primeiro card"></app-small-card>
+        <app-small-card photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" smallCardTitle="Título do Segundo Card"></app-small-card>
+        <app-small-card photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" smallCardTitle="Título do Terceiro Card"></app-small-card>
     </div>
 </div>
