--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="container">
+    <ul>
+        <li><a href="https://www.linkedin.com/in/camilafbcoelho" target="_blank">LinkedIn</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://www.github.com/camilafbc" target="_blank">GitHub</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://www.instagram.com/camilafbcoelho" target="_blank">Instagram</a></li>
+    </ul>
+</div>
