--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="small-card__content">
         <div class="small-card__image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" alt="img">
+            <img src="{{ photoCover }}" alt="img">
         </div>
     
         <div class="small-card__title">
             <a href="http://#" target="_blank">
-                <h1>Título do small card</h1>
+                <h1>{{ smallCardTitle }}</h1>
             </a>
         </div>
     </div>
