--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="big-card__title">
-        <a href="#">
+        <a [routerLink]="['content', id]">
             <h1>{{ cardTitle }}</h1>
         </a>
     </div>
