--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -5,7 +5,7 @@
         </div>
     
         <div class="small-card__title">
-            <a href="http://#" target="_blank">
+            <a [routerLink]="['content', Id]">
                 <h1>{{ smallCardTitle }}</h1>
             </a>
         </div>
