--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -1,26 +1,33 @@
 .container{
-    border: 2px solid red;
+    
     width: 100%;
     height: 100vh;
-    margin-top: 20px;
+    margin-top: 30px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.content_cover{
-    border: 1px solid gray;
-}
 
-.content-cover > img{
+.content_cover > img{
     width: 500px;
     min-width: 500px;
     height: 300px;
+    object-fit: cover;
+    border-radius: 5px;
+
+    box-shadow: 0 0 10px #80808066;
+}
+
+.content_title{
+    margin-top: 15px;
 }
 
 .content_description{
     margin-top: 15px;
+    text-align: center;
+    width: 60%;
 }
 
 .content_description > p{
