--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -2,7 +2,8 @@
 .articles{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 
-    margin: 30px 15px 0;
+    margin: 30px auto;
+    width: 90%;
 }
