--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin: 0 10px;
-    width: 400px;
+    /* margin: 0 10px; */
+    /* width: 300px; */
+    width: 100%;
     height: 500px;
 }
 
@@ -17,10 +18,16 @@
     color: gray;
 }
 
+.big-card__image{
+    width: 100%;
+}
+
 .big-card__image > img{
     width: 100%;
-    min-width: 400px;
+    /* min-width: 300px; */
+    /* height: 200px; */
     border-radius: 5px;
+    object-fit: cover;
 }
 
 a{
