--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,7 @@ header{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+
+    background-color: #111111;
+    color: #f5f5f5;
 }
