--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -14,6 +14,10 @@
     width: 90%;
 }
 
-.article_others{
-    
+.under_cards{
+    height: 500px;
+}
+
+app-under-card{
+    background-color: #f5f5f5;
 }
