--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,8 +5,16 @@
         <app-big-card id="1" photoCover="https://images.unsplash.com/photo-1543785734-4b6e564642f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" cardTitle="¡De Madrid al cielo!" cardDescription="Descubra a arquitetura fascinante de Madrid de cima! Listamos opções para admirar a capital espanhola do alto, seja subindo ao topo de edifícios emblemáticos ou explorando os parques da cidade." ></app-big-card>
     </div>
     <div class="article_others">
-        <app-small-card Id="2" photoCover="https://images.unsplash.com/photo-1655226734376-ba5d22f2276a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" smallCardTitle="O Primavera Sound, um dos maiores festivais de música da Europa, reune os artistas mais populares e inovadores do momento em uma experiência musical única"></app-small-card>
+        <app-small-card Id="2" photoCover="https://images.unsplash.com/photo-1655226734376-ba5d22f2276a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" smallCardTitle="Primavera Sound reune os artistas mais populares e inovadores do momento em uma experiência musical única"></app-small-card>
         <app-small-card Id="3" photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" smallCardTitle="Título do Segundo Card"></app-small-card>
         <app-small-card Id="4" photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" smallCardTitle="Título do Terceiro Card"></app-small-card>
+    </div>
+</div>
+<div class="under_cards white-background">
+    <div class="under_cards_content white-background">
+        <app-under-card Id="5" under_card_photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" underCardTitle="Título Small Card"></app-under-card>
+    <app-under-card Id="6" under_card_photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" underCardTitle="Título Small Card"></app-under-card>
+    <app-under-card Id="7" under_card_photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" underCardTitle="Título Small Card"></app-under-card>
+    <app-under-card Id="8" under_card_photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" underCardTitle="Título Small Card"></app-under-card>
     </div>
 </div>
