--- a/src/app/pages/home/home.component.responsive.css
+++ b/src/app/pages/home/home.component.responsive.css
@@ -1,3 +1,9 @@
+@media (min-width: 360px){
+    .under_cards_content{
+        grid-template-areas: 'card-1 card-2''card-3 card-4';
+    }
+}
+
 @media(min-width: 768px){
 
     .articles{
