--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,15 +6,18 @@
     </div>
     <div class="article_others">
         <app-small-card Id="2" photoCover="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" smallCardTitle="Primavera Sound reune os artistas mais populares e inovadores do momento em uma experiência musical única"></app-small-card>
-        <app-small-card Id="3" photoCover="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZXNwYW5oYXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" smallCardTitle="Título do Segundo Card"></app-small-card>
-        <app-small-card Id="4" photoCover="https://images.unsplash.com/photo-1573611030146-ff6916c398fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=751&q=80" smallCardTitle="Título do Terceiro Card"></app-small-card>
+        <app-small-card Id="3" photoCover="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZXNwYW5oYXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" smallCardTitle="Descubra a cidade espanhola com uma escadaria vibrante: Um espetáculo de cores inspirado na bandeira nacional!"></app-small-card>
+        <app-small-card Id="4" photoCover="https://images.unsplash.com/photo-1573611030146-ff6916c398fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=751&q=80" smallCardTitle="Sevilla: Descubra a cidade encantadora e apaixonante da Espanha!"></app-small-card>
     </div>
 </div>
 <div class="under_cards white-background">
+    <div class="under_title">
+        <h5>ENTRETENIMENTO</h5>
+    </div>
     <div class="under_cards_content white-background">
-        <app-under-card class="under_card_1" Id="5" under_card_photoCover="https://images.unsplash.com/photo-1502773860571-211a597d6e4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" underCardTitle="Título Small Card"></app-under-card>
-        <app-under-card class="under_card_2" Id="6" under_card_photoCover="https://images.unsplash.com/photo-1514525253161-7a46d19cd819?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" underCardTitle="Título Small Card"></app-under-card>
-        <app-under-card class="under_card_3" Id="7" under_card_photoCover="https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" underCardTitle="Título Small Card"></app-under-card>
-        <app-under-card class="under_card_4" Id="8" under_card_photoCover="https://images.unsplash.com/photo-1606937295547-bc0f668595b3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" underCardTitle="Título Small Card"></app-under-card>
+        <app-under-card class="under_card_1" Id="5" under_card_photoCover="https://images.unsplash.com/photo-1502773860571-211a597d6e4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" underCardTitle="Música Espanhola Imortalizada: Discos Emblemáticos que Deixaram sua Marca"></app-under-card>
+        <app-under-card class="under_card_2" Id="6" under_card_photoCover="https://images.unsplash.com/photo-1606819717115-9159c900370b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" underCardTitle="Explorando o Passado e a Arte: Museus Imperdíveis na Espanha"></app-under-card>
+        <app-under-card class="under_card_3" Id="7" under_card_photoCover="https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" underCardTitle="Cinema Espanhol em Destaque: Últimos Lançamentos que Você Precisa Assistir"></app-under-card>
+        <app-under-card class="under_card_4" Id="8" under_card_photoCover="https://images.unsplash.com/photo-1519682337058-a94d519337bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bGl2cm9zfGVufDB8MHwwfHx8MA%3D%3D&w=1000&q=80" underCardTitle="Leituras Imortais: Livros Marcantes do Castellano"></app-under-card>
     </div>
 </div>
