--- a/src/app/components/under-card/under-card.component.css
+++ b/src/app/components/under-card/under-card.component.css
@@ -4,23 +4,20 @@
 }
 
 .container{
-    /* background-color: #f5f5f5; */
-    /* color: #111111; */
+    max-width: 300px;
+    max-height: 300px;
 }
 
 .under-card__content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 700px; */
-    width: 90%;
     margin: 0 auto 15px;
-    /* background-color: #f5f5f5; */
 }
 
 .under-card__image > img{
-    width: 200px;
-    height: 130px;
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
     border-radius: 5px;
 }
@@ -29,8 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 0.6rem;
-    /* margin-left: 1rem; */
+    font-size: 0.4rem;
     color: #111111;
 }
 
