--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -2,7 +2,7 @@
     
     width: 100%;
     height: 100vh;
-    margin-top: 30px;
+    margin: 30px 0;
 
     display: flex;
     flex-direction: column;
@@ -11,9 +11,10 @@
 
 
 .content_cover > img{
-    width: 500px;
+    /* width: 500px;
     min-width: 500px;
-    height: 300px;
+    height: 300px; */
+    width: 280px;
     object-fit: cover;
     border-radius: 5px;
 
@@ -22,14 +23,26 @@
 
 .content_title{
     margin-top: 15px;
+    width: 80%;
+    text-align: center;
+}
+
+.content_title > h1{
+    font-size: 1.5rem;
 }
 
 .content_description{
     margin-top: 15px;
     text-align: center;
-    width: 60%;
+    width: 80%;
 }
 
 .content_description > p{
     color: gray;
+    margin-bottom: 3rem;
+}
+
+a{
+    margin: 15px 0 10px;
+    font-size: 0.75rem;
 }
