--- a/src/app/pages/home/home.component.responsive.css
+++ b/src/app/pages/home/home.component.responsive.css
@@ -1,6 +1,7 @@
 @media (min-width: 360px){
     .under_cards_content{
         grid-template-areas: 'card-1 card-2''card-3 card-4';
+        gap: 2rem;
     }
 }
 
@@ -21,5 +22,11 @@
     
     .article_others{
         width: 50%;
+        margin-top: 0;
+    }
+
+    .under_cards_content{
+        grid-template-areas: 'card-1 card-2 card-3 card-4';
+        /* gap: 2rem; */
     }
 }
